--- a/style/header.css
+++ b/style/header.css
@@ -15,6 +15,10 @@ header {
     height: 1.25rem;
 }
 
+.menu-button {
+    display: none;
+}
+
 .navigation-link {
 
     display: grid;
@@ -38,16 +42,14 @@ header {
     cursor: pointer;
 }
 
-@media (min-width: 376px) {
-    .menu-button {
-        display: none;
-    }
-}
-
-@media (max-width: 375px) {
+@media (max-device-width: 480px) {
 
     .navigation-link {
         display: none;
+    }
+
+    .menu-button {
+        display: initial;
     }
 
     header {
