--- a/style/header.css
+++ b/style/header.css
@@ -1,6 +1,8 @@
-header {
+.navigation-bar {
     display: flex;
     justify-content: flex-end;
+
+    position: relative;
 
     padding-left: 3.75rem;
     padding-right: 3.75rem;
@@ -13,6 +15,7 @@ header {
 
     width: 1.875rem;
     height: 1.25rem;
+
 }
 
 .menu-button {
@@ -27,7 +30,7 @@ header {
 
 }
 
-.navigation-link a {
+.navigation-link a, .drop-down-menu a {
 
     text-decoration: none;
     color: inherit;
@@ -36,10 +39,35 @@ header {
     font-weight: 500;
 }
 
-.navigation-link a:hover {
+.navigation-link a:hover, .drop-down-menu a:hover {
 
     color: var(--primary);
     cursor: pointer;
+}
+
+.drop-down-menu {
+
+    position: absolute;
+    
+    z-index: 100;
+
+    right: 1.125rem;
+
+    padding: 1rem;
+
+    box-shadow: 0px 0px 25px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+
+    display: none;
+    
+    
+}
+
+.drop-down-menu-display {
+
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 0.8rem;
 }
 
 @media (max-width: 480px) {
@@ -52,11 +80,12 @@ header {
         display: initial;
     }
 
-    header {
+    .navigation-bar {
     
         padding-left: 1.125rem;
         padding-right: 1.125rem;
         padding-top: 1.25rem;
+        padding-bottom: 0.75rem;
     }
 }
 
